--- a/collectors/python.d.plugin/oracledb/oracledb.conf
+++ b/collectors/python.d.plugin/oracledb/oracledb.conf
@@ -78,11 +78,11 @@
 #  password: 'secret'
 #  server: 'localhost:1521'
 #  service: 'XE'
-#  service: 'tcps'
+#  protocol: 'tcps'
 
 #remote:
 #  user: 'netdata'
 #  password: 'secret'
 #  server: '10.0.0.1:1521'
 #  service: 'XE'
-#  service: 'tcps'
+#  protocol: 'tcps'
