--- a/contrib/debian/control
+++ b/contrib/debian/control
@@ -64,7 +64,7 @@ Package: netdata-plugin-cups
 Architecture: any
 Depends: cups,
          ${shlibs:Depends},
-         netdata (>= ${source:Version})
+         netdata (= ${source:Version})
 Description: The CUPS metrics collection plugin for the Netdata Agent
  This plugin allows the Netdata Agent to collect metrics from the Common
  UNIX Printing System.
@@ -73,7 +73,7 @@ Package: netdata-plugin-freeipmi
 Architecture: any
 Depends: freeipmi,
          ${shlibs:Depends},
-         netdata (>= ${source:Version})
+         netdata (= ${source:Version})
 Description: The FreeIPMI metrics collection plugin for the Netdata Agent
  This plugin allows the Netdata Agent to collect metrics from hardware
  using FreeIPMI.
@@ -81,7 +81,7 @@ Description: The FreeIPMI metrics collection plugin for the Netdata Agent
 Package: netdata-plugin-nfacct
 Architecture: any
 Depends: ${shlibs:Depends},
-         netdata (>= ${source:Version})
+         netdata (= ${source:Version})
 Conflicts: netdata (< ${source:Version})
 Description: The NFACCT metrics collection plugin for the Netdata Agent
  This plugin allows the Netdata Agent to collect metrics from the firewall
@@ -90,7 +90,7 @@ Description: The NFACCT metrics collection plugin for the Netdata Agent
 Package: netdata-plugin-chartsd
 Architecture: all
 Depends: bash,
-         netdata (>= ${source:Version})
+         netdata (= ${source:Version})
 Conflicts: netdata (< ${source:Version})
 Suggests: apcupsd, nut, iw, sudo
 Description: The charts.d metrics collection plugin for the Netdata Agent
@@ -101,7 +101,7 @@ Description: The charts.d metrics collection plugin for the Netdata Agent
 Package: netdata-plugin-ebpf
 Architecture: amd64
 Depends: ${shlibs:Depends},
-         netdata (>= ${source:Version})
+         netdata (= ${source:Version})
 Recommends: netdata-ebpf-code-legacy (= ${source:Version}),
             netdata-plugin-apps (= ${source:Version})
 Conflicts: netdata (< ${source:Version})
@@ -122,7 +122,7 @@ Description: Compiled eBPF legacy code for the Netdata eBPF plugin
 Package: netdata-plugin-pythond
 Architecture: all
 Depends: ${shlibs:Depends},
-         netdata (>= ${source:Version})
+         netdata (= ${source:Version})
 Suggests: sudo
 Conflicts: netdata (< ${source:Version})
 Description: The python.d metrics collection plugin for the Netdata Agent
@@ -134,7 +134,7 @@ Package: netdata-plugin-go
 Architecture: any
 Depends: ${shlibs:Depends},
          libcap2-bin,
-         netdata (>= ${source:Version})
+         netdata (= ${source:Version})
 Suggests: nvme-cli, sudo
 Conflicts: netdata (< ${source:Version})
 Description: The go.d metrics collection plugin for the Netdata Agent
@@ -147,7 +147,7 @@ Package: netdata-plugin-apps
 Architecture: any
 Depends: ${shlibs:Depends},
          libcap2-bin,
-         netdata (>= ${source:Version})
+         netdata (= ${source:Version})
 Conflicts: netdata (< ${source:Version})
 Description: The per-application metrics collection plugin for the Netdata Agent
  This plugin allows the Netdata Agent to collect per-application and
@@ -157,7 +157,7 @@ Package: netdata-plugin-slabinfo
 Architecture: any
 Depends: ${shlibs:Depends},
          libcap2-bin,
-         netdata (>= ${source:Version})
+         netdata (= ${source:Version})
 Conflicts: netdata (< ${source:Version})
 Description: The slabinfo metrics collector for the Netdata Agent
  This plugin allows the Netdata Agent to collect perfromance and
@@ -167,7 +167,7 @@ Package: netdata-plugin-perf
 Architecture: any
 Depends: ${shlibs:Depends},
          libcap2-bin,
-         netdata (>= ${source:Version})
+         netdata (= ${source:Version})
 Conflicts: netdata (< ${source:Version})
 Description: The perf metrics collector for the Netdata Agent
  This plugin allows the Netdata to collect metrics from the Linux perf
@@ -177,7 +177,7 @@ Package: netdata-plugin-debugfs
 Architecture: any
 Depends: ${shlibs:Debends},
          libcap2-bin,
-         netdata (>= ${source:Version})
+         netdata (= ${source:Version})
 Conflicts: netdata (< ${source:Version})
 Description: The debugfs metrics collector for the Netdata Agent
  This plugin allows the Netdata Agent to collect Linux kernel metrics
