--- a/health/health.d/plugin.conf
+++ b/health/health.d/plugin.conf
@@ -7,5 +7,5 @@
     every: 10s
      warn: $this > (($status >= $WARNING)  ? ($update_every) : (20 * $update_every))
     delay: down 5m multiplier 1.5 max 1h
-     info: amount of time that ${label:_collect_plugin} did not report metrics
+     info: the amount of time that ${label:_collect_plugin} did not report its availability status
        to: sysadmin
