--- a/health/health.d/plugin.conf
+++ b/health/health.d/plugin.conf
@@ -1,4 +1,4 @@
- template: plugin.availability_status
+ template: plugin_availability_status
        on: netdata.plugin_availability_status
     class: Errors
      type: Netdata
