--- a/contrib/debian/control
+++ b/contrib/debian/control
@@ -37,22 +37,22 @@ Depends: adduser,
          lsb-base (>= 3.1-23.2),
          openssl,
          ${misc:Depends},
-         ${shlibs:Depends}
+         ${shlibs:Depends},
+         netdata-plugin-ebpf,
+         netdata-plugin-apps,
+         netdata-plugin-pythond,
+         netdata-plugin-go,
+         netdata-plugin-debugfs
+         netdata-plugin-cups,
+         netdata-plugin-freeipmi,
+         netdata-plugin-nfacct,
+         netdata-plugin-chartsd,
+         netdata-plugin-slabinfo,
+         netdata-plugin-perf
 Conflicts: netdata-core,
            netdata-plugins-bash,
            netdata-plugins-python,
            netdata-web
-Recommends: netdata-plugin-ebpf,
-            netdata-plugin-apps,
-            netdata-plugin-pythond,
-            netdata-plugin-go,
-            netdata-plugin-debugfs
-Suggests: netdata-plugin-cups,
-          netdata-plugin-freeipmi,
-          netdata-plugin-nfacct,
-          netdata-plugin-chartsd,
-          netdata-plugin-slabinfo,
-          netdata-plugin-perf
 Pre-Depends: dpkg (>= 1.17.14)
 Description: real-time charts for system monitoring
  Netdata is a daemon that collects data in realtime (per second)
