--- a/netdata.spec.in
+++ b/netdata.spec.in
@@ -147,25 +147,23 @@ Requires(pre): /usr/sbin/useradd
 # to support weak dependencies. Explicitly requiring our default plugins
 # makes it impossible to properly test the packages prior to upload,
 # so we just skip depending on them on CentOS 7.
-%if 0%{?centos_ver} != 7
 %if 0%{?_have_ebpf}
-Recommends: netdata-plugin-ebpf
+Requires: netdata-plugin-ebpf
 %endif
-Recommends: netdata-plugin-apps
-Recommends: netdata-plugin-pythond
-Recommends: netdata-plugin-go
-Recommends: netdata-plugin-debugfs
+Requires: netdata-plugin-apps
+Requires: netdata-plugin-pythond
+Requires: netdata-plugin-go
+Requires: netdata-plugin-debugfs
 %if 0%{?_have_freeipmi}
-Suggests:   netdata-plugin-freeipmi
+Requires:   netdata-plugin-freeipmi
 %endif
 %if 0%{?_have_nfacct}
-Suggests:   netdata-plugin-nfacct
+Requires:   netdata-plugin-nfacct
 %endif
-Suggests:   netdata-plugin-cups
-Suggests:   netdata-plugin-chartsd
-Suggests:   netdata-plugin-slabinfo
-Suggests:   netdata-plugin-perf
-%endif
+Requires:   netdata-plugin-cups
+Requires:   netdata-plugin-chartsd
+Requires:   netdata-plugin-slabinfo
+Requires:   netdata-plugin-perf
 
 # #####################################################################
 # Functionality-dependent package dependencies
