--- a/contrib/debian/control
+++ b/contrib/debian/control
@@ -72,16 +72,16 @@ Description: The CUPS metrics collection plugin for the Netdata Agent
 Package: netdata-plugin-freeipmi
 Architecture: any
 Depends: freeipmi,
-         ${shlibs:Depends},
-         netdata (= ${source:Version})
+         ${shlibs:Depends}
+Pre-Depends: netdata (= ${source:Version})
 Description: The FreeIPMI metrics collection plugin for the Netdata Agent
  This plugin allows the Netdata Agent to collect metrics from hardware
  using FreeIPMI.
 
 Package: netdata-plugin-nfacct
 Architecture: any
-Depends: ${shlibs:Depends},
-         netdata (= ${source:Version})
+Depends: ${shlibs:Depends}
+Pre-Depends: netdata (= ${source:Version})
 Conflicts: netdata (<< ${source:Version})
 Description: The NFACCT metrics collection plugin for the Netdata Agent
  This plugin allows the Netdata Agent to collect metrics from the firewall
@@ -89,8 +89,8 @@ Description: The NFACCT metrics collection plugin for the Netdata Agent
 
 Package: netdata-plugin-chartsd
 Architecture: all
-Depends: bash,
-         netdata (= ${source:Version})
+Depends: bash
+Pre-Depends: netdata (= ${source:Version})
 Conflicts: netdata (<< ${source:Version})
 Suggests: apcupsd, nut, iw, sudo
 Description: The charts.d metrics collection plugin for the Netdata Agent
@@ -100,8 +100,8 @@ Description: The charts.d metrics collection plugin for the Netdata Agent
 
 Package: netdata-plugin-ebpf
 Architecture: amd64
-Depends: ${shlibs:Depends},
-         netdata (= ${source:Version})
+Depends: ${shlibs:Depends}
+Pre-Depends: netdata (= ${source:Version})
 Recommends: netdata-ebpf-code-legacy (= ${source:Version}),
             netdata-plugin-apps (= ${source:Version})
 Conflicts: netdata (<< ${source:Version})
@@ -121,8 +121,8 @@ Description: Compiled eBPF legacy code for the Netdata eBPF plugin
 
 Package: netdata-plugin-pythond
 Architecture: all
-Depends: ${shlibs:Depends},
-         netdata (= ${source:Version})
+Depends: ${shlibs:Depends}
+Pre-Depends: netdata (= ${source:Version})
 Suggests: sudo
 Conflicts: netdata (<< ${source:Version})
 Description: The python.d metrics collection plugin for the Netdata Agent
@@ -132,9 +132,9 @@ Description: The python.d metrics collection plugin for the Netdata Agent
 
 Package: netdata-plugin-go
 Architecture: any
-Depends: ${shlibs:Depends},
-         libcap2-bin,
-         netdata (= ${source:Version})
+Depends: ${shlibs:Depends}
+Pre-Depends: libcap2-bin,
+             netdata (= ${source:Version})
 Suggests: nvme-cli, sudo
 Conflicts: netdata (<< ${source:Version})
 Description: The go.d metrics collection plugin for the Netdata Agent
@@ -145,9 +145,9 @@ Description: The go.d metrics collection plugin for the Netdata Agent
 
 Package: netdata-plugin-apps
 Architecture: any
-Depends: ${shlibs:Depends},
-         libcap2-bin,
-         netdata (= ${source:Version})
+Depends: ${shlibs:Depends}
+Pre-Depends: libcap2-bin,
+             netdata (= ${source:Version})
 Conflicts: netdata (<< ${source:Version})
 Description: The per-application metrics collection plugin for the Netdata Agent
  This plugin allows the Netdata Agent to collect per-application and
@@ -155,9 +155,9 @@ Description: The per-application metrics collection plugin for the Netdata Agent
 
 Package: netdata-plugin-slabinfo
 Architecture: any
-Depends: ${shlibs:Depends},
-         libcap2-bin,
-         netdata (= ${source:Version})
+Depends: ${shlibs:Depends}
+Pre-Depends: libcap2-bin,
+             netdata (= ${source:Version})
 Conflicts: netdata (<< ${source:Version})
 Description: The slabinfo metrics collector for the Netdata Agent
  This plugin allows the Netdata Agent to collect perfromance and
@@ -165,9 +165,9 @@ Description: The slabinfo metrics collector for the Netdata Agent
 
 Package: netdata-plugin-perf
 Architecture: any
-Depends: ${shlibs:Depends},
-         libcap2-bin,
-         netdata (= ${source:Version})
+Depends: ${shlibs:Depends}
+Pre-Depends: libcap2-bin,
+             netdata (= ${source:Version})
 Conflicts: netdata (<< ${source:Version})
 Description: The perf metrics collector for the Netdata Agent
  This plugin allows the Netdata to collect metrics from the Linux perf
@@ -175,9 +175,9 @@ Description: The perf metrics collector for the Netdata Agent
 
 Package: netdata-plugin-debugfs
 Architecture: any
-Depends: ${shlibs:Debends},
-         libcap2-bin,
-         netdata (= ${source:Version})
+Depends: ${shlibs:Debends}
+Pre-Depends: libcap2-bin,
+             netdata (= ${source:Version})
 Conflicts: netdata (<< ${source:Version})
 Description: The debugfs metrics collector for the Netdata Agent
  This plugin allows the Netdata Agent to collect Linux kernel metrics
