--- a/netdata.spec.in
+++ b/netdata.spec.in
@@ -11,7 +11,7 @@
 AutoReqProv: yes
 
 # This is temporary and should eventually be resolved. This bypasses
-# the default rhel __os_install_post which throws a python compile
+# the default rhel __os_install_p,ost which throws a python compile
 # error.
 %global __os_install_post %{nil}
 
@@ -593,6 +593,12 @@ Requires: netdata = %{version}
 %description plugin-cups
  This plugin allows the Netdata Agent to collect metrics from the Common UNIX Printing System.
 
+%pre plugin-cups
+
+if ! getent group netdata > /dev/null; then
+  groupadd --system netdata
+fi
+
 %files plugin-cups
 %attr(0750,root,netdata) %{_libexecdir}/%{name}/plugins.d/cups.plugin
 %endif
@@ -607,6 +613,12 @@ Requires: netdata = %{version}
 %description plugin-freeipmi
  This plugin allows the Netdata Agent to collect metrics from hardware using FreeIPMI.
 
+%pre plugin-freeipmi
+
+if ! getent group netdata > /dev/null; then
+  groupadd --system netdata
+fi
+
 %files plugin-freeipmi
 %attr(4750,root,netdata) %{_libexecdir}/%{name}/plugins.d/freeipmi.plugin
 %endif
@@ -620,6 +632,12 @@ Conflicts: netdata < %{version}
 
 %description plugin-nfacct
  This plugin allows the Netdata Agent to collect metrics from the firewall using NFACCT objects.
+
+%pre plugin-nfacct
+
+if ! getent group netdata > /dev/null; then
+  groupadd --system netdata
+fi
 
 %files plugin-nfacct
 %attr(4750,root,netdata) %{_libexecdir}/%{name}/plugins.d/nfacct.plugin
@@ -641,6 +659,12 @@ Suggests: sudo
 %description plugin-chartsd
  This plugin adds a selection of additional collectors written in shell script to the Netdata Agent.
 It includes collectors for NUT, APCUPSD, LibreSWAN, OpenSIPS, and Wireless access point statistics.
+
+%pre plugin-chartsd
+
+if ! getent group netdata > /dev/null; then
+  groupadd --system netdata
+fi
 
 %files plugin-chartsd
 %defattr(0750,root,netdata,0750)
@@ -668,6 +692,12 @@ Requires: netdata-ebpf-legacy-code >= %{version}
 %description plugin-ebpf
  This plugin allows the Netdata Agent to use eBPF code to collect more detailed kernel-level metrics for the system.
 
+%pre plugin-ebpf
+
+if ! getent group netdata > /dev/null; then
+  groupadd --system netdata
+fi
+
 %files plugin-ebpf
 %defattr(4750,root,netdata,4750)
 %{_libexecdir}/%{name}/plugins.d/ebpf.plugin
@@ -683,7 +713,13 @@ Conflicts: netdata < %{version}
 
 %description ebpf-legacy-code
  This package provides the pre-compiled eBPF legacy code for use by the Netdata eBPF plugin.
-This code is only needed when using the eBPF plugin with kernel versions before 5.10.
+ This code is only needed when using the eBPF plugin with kernel versions before 5.10.
+
+%pre plugin-ebpf-legacy-code
+
+if ! getent group netdata > /dev/null; then
+  groupadd --system netdata
+fi
 
 %files ebpf-legacy-code
 %defattr(0640,root,netdata,0640)
@@ -714,6 +750,12 @@ Suggests: sudo
 Many of the collectors provided by this package are also available in netdata-plugin-go. In msot cases, you probably
 want to use those versions instead of the Python versions.
 
+%pre plugin-plugin-pythond
+
+if ! getent group netdata > /dev/null; then
+  groupadd --system netdata
+fi
+
 %files plugin-pythond
 %defattr(0750,root,netdata,0750)
 %{_libexecdir}/%{name}/plugins.d/python.d.plugin
@@ -737,6 +779,12 @@ Suggests: sudo
 A significant percentage of the application specific collectors provided by Netdata are part of this plugin,
 so most users will want it installed.
 
+%pre plugin-go
+
+if ! getent group netdata > /dev/null; then
+  groupadd --system netdata
+fi
+
 %files plugin-go
 %defattr(0750,root,netdata,0750)
 # CAP_NET_ADMIN needed for WireGuard collector
@@ -755,6 +803,12 @@ Conflicts: netdata < %{version}
 %description plugin-apps
  This plugin allows the Netdata Agent to collect per-application and per-user metrics without using cgroups.
 
+%pre plugin-apps
+
+if ! getent group netdata > /dev/null; then
+  groupadd --system netdata
+fi
+
 %files plugin-apps
 %defattr(0750,root,netdata,0750)
 # CAP_DAC_READ_SEARCH and CAP_SYS_PTRACE needed for data collection by the plugin.
@@ -771,6 +825,12 @@ Conflicts: netdata < %{version}
 %description plugin-slabinfo
  This plugin allows the Netdata Agent to collect perfromance and utilization metrics for the Linux kernel’s SLAB allocator.
 
+%pre plugin-slabinfo
+
+if ! getent group netdata > /dev/null; then
+  groupadd --system netdata
+fi
+
 %files plugin-slabinfo
 %defattr(0750,root,netdata,0750)
 # CAP_DAC_READ_SEARCH needed to access the files the plugin reads to collect data.
@@ -784,6 +844,12 @@ Conflicts: netdata < %{version}
 
 %description plugin-perf
  This plugin allows the Netdata to collect metrics from the Linux perf subsystem.
+
+%pre plugin-perf
+
+if ! getent group netdata > /dev/null; then
+  groupadd --system netdata
+fi
 
 %files plugin-perf
 %defattr(0750,root,netdata,0750)
@@ -803,6 +869,12 @@ Conflicts: netdata < %{version}
 
 %description plugin-debugfs
  This plugin allows the Netdata Agent to collect Linux kernel metrics exposed through debugfs.
+
+%pre plugin-debugfs
+
+if ! getent group netdata > /dev/null; then
+  groupadd --system netdata
+fi
 
 %files plugin-debugfs
 %defattr(0750,root,netdata,0750)
