--- a/Makefile.am
+++ b/Makefile.am
@@ -202,6 +202,8 @@ LIBNETDATA_FILES = \
     libnetdata/worker_utilization/worker_utilization.c \
     libnetdata/worker_utilization/worker_utilization.h \
     libnetdata/http/http_defs.h \
+    libnetdata/dyn_conf/dyn_conf.c \
+    libnetdata/dyn_conf/dyn_conf.h \
     $(NULL)
 
 if ENABLE_PLUGIN_EBPF
@@ -955,8 +957,6 @@ HTTPD_FILES = \
     httpd/streaming.h \
     httpd/connlist.c \
     httpd/connlist.h \
-    httpd/dyn_conf.c \
-    httpd/dyn_conf.h \
     $(NULL)
 
 libh2o_dir = httpd/h2o
