--- a/netdata.spec.in
+++ b/netdata.spec.in
@@ -481,7 +481,7 @@ rm -rf "${RPM_BUILD_ROOT}"
 %files
 %doc README.md
 %config(noreplace) %{_sysconfdir}/%{name}/netdata.conf
-%attr(0644,root,netdata) %{_sysconfdir}/%{name}/netdata-updater.conf
+%config(noreplace) %{_sysconfdir}/%{name}/netdata-updater.conf
 %attr(0755,root,netdata) %{_sysconfdir}/%{name}/edit-config
 %attr(0644,root,netdata) %{_sysconfdir}/%{name}/.install-type
 %dir %{_sysconfdir}/%{name}/health.d
