check_ebpf_syscall: Enable thread to avoid confusion

--- a/collectors/ebpf.plugin/ebpf.d.conf
+++ b/collectors/ebpf.plugin/ebpf.d.conf
@@ -68,7 +68,7 @@
     shm = yes
     socket = no
     softirq = yes
-    sync = no
+    sync = yes
     swap = yes
     vfs = no
     network connections = no
