Add support for SUSE 15.5
Signed-off-by: Tasos Katsoulas <tasos@netdata.cloud>

--- a/.github/data/distros.yml
+++ b/.github/data/distros.yml
@@ -177,6 +177,11 @@ include:
         - aarch64
     test:
       ebpf-core: true
+  - <<: *opensuse
+    version: "15.5"
+    packages:
+      <<: *opensuse_packages
+      repo_distro: opensuse/15.5
 
   - &oracle
     distro: oraclelinux
