ebpf_functions: Add new eBPF option to configuration file and also add an internal variable to reset periodo of time before thread dies

--- a/collectors/ebpf.plugin/ebpf.d.conf
+++ b/collectors/ebpf.plugin/ebpf.d.conf
@@ -19,6 +19,8 @@
 #
 # The `maps per core` defines if hash tables will be per core or not. This option is ignored on kernels older than 4.15.
 #
+# The `life time` defines the time length a thread will run when is enabled by a function.
+#
 [global]
     ebpf load mode = entry
     apps = no
