--- a/collectors/ebpf.plugin/ebpf.d/hardirq.conf
+++ b/collectors/ebpf.plugin/ebpf.d/hardirq.conf
@@ -3,6 +3,9 @@
 #  `return : In the `return` mode, the eBPF collector monitors the same kernel functions as `entry`, but also creates
 #            new charts for the return of these functions, such as errors.
 #
-#[global]
+# The `life time` defines the time length a thread will run when is enabled by a function.
+#
+[global]
 #    ebpf load mode = entry
 #    update every = 10
+    life time = 300
