--- a/collectors/ebpf.plugin/ebpf.d/mount.conf
+++ b/collectors/ebpf.plugin/ebpf.d/mount.conf
@@ -12,8 +12,12 @@
 #   `trampoline`: This is the default mode used by the eBPF collector, due the small overhead added to host.
 #   `tracepoint`: When available, the eBPF collector will use kernel tracepoint to monitor syscall.
 #   `probe`     : This is the same as legacy code.
+#
+# The `life time` defines the time length a thread will run when is enabled by a function.
+#
 [global]
 #    ebpf load mode = entry
 #    update every = 1
     ebpf type format = auto
     ebpf co-re tracing = trampoline
+    life time = 300
