--- a/collectors/ebpf.plugin/ebpf.d/network.conf
+++ b/collectors/ebpf.plugin/ebpf.d/network.conf
@@ -26,6 +26,8 @@
 #
 # The `maps per core` defines if hash tables will be per core or not. This option is ignored on kernels older than 4.6.
 #
+# The `life time` defines the time length a thread will run when is enabled by a function.
+#
 # Uncomment lines to define specific options for thread.
 [global]
 #    ebpf load mode = entry
@@ -39,6 +41,7 @@
     ebpf type format = auto
     ebpf co-re tracing = trampoline
     maps per core = no
+    life time = 300
 
 #
 # Network Connection
