--- a/collectors/ebpf.plugin/ebpf.d/sync.conf
+++ b/collectors/ebpf.plugin/ebpf.d/sync.conf
@@ -19,6 +19,8 @@
 #   `probe`     : This is the same as legacy code.
 #
 # The `maps per core` defines if hash tables will be per core or not. This option is ignored on kernels older than 4.6.
+#
+# The `life time` defines the time length a thread will run when is enabled by a function.
 #  
 # Uncomment lines to define specific options for thread.
 [global]
@@ -29,6 +31,7 @@
     ebpf type format = auto
     ebpf co-re tracing = trampoline
 #    maps per core = yes
+    life time = 300
 
 # List of monitored syscalls 
 [syscalls]
