--- a/health/health.d/whoisquery.conf
+++ b/health/health.d/whoisquery.conf
@@ -8,5 +8,6 @@ component: WHOIS
     units: seconds
     every: 60s
      warn: $this < $days_until_expiration_warning*24*60*60
+     crit: $this < $days_until_expiration_critical*24*60*60
      info: time until the domain name registration expires
        to: webmaster
