--- a/health/health.d/apcupsd.conf
+++ b/health/health.d/apcupsd.conf
@@ -28,7 +28,7 @@ component: UPS
     units: %
     every: 60s
      warn: $this < 100
-     crit: $this < (($status == $CRITICAL) ? (50) : (40))
+     crit: $this < 40
     delay: down 10m multiplier 1.5 max 1h
      info: average UPS charge over the last minute
        to: sitemgr
