--- a/netdata.spec.in
+++ b/netdata.spec.in
@@ -344,7 +344,7 @@ install -m 750 -p packaging/installer/netdata-uninstaller.sh \
 # Install netdata service
 
 install -m 755 -d "${RPM_BUILD_ROOT}%{_unitdir}"
-%if 0%{?centos_ver} != 7 && 0%{?amzn} != 2
+%if 0%{?centos_ver} != 7 && 0%{?amazon_linux} != 2
 install -m 644 -p system/systemd/netdata.service "${RPM_BUILD_ROOT}%{_unitdir}/netdata.service"
 %else
 install -m 644 -p system/systemd/netdata.service.v235 "${RPM_BUILD_ROOT}%{_unitdir}/netdata.service"
