--- a/health/health.d/megacli.conf
+++ b/health/health.d/megacli.conf
@@ -66,5 +66,6 @@ component: RAID
     units: cycles
     every: 10s
      warn: $this >= 100
+     crit: $this >= 500
      info: average battery backup unit (BBU) charge cycles count over the last 10 seconds
        to: sysadmin
