Update to latest v2 dashboard.

--- a/web/gui/v2/Makefile.am
+++ b/web/gui/v2/Makefile.am
@@ -23,38 +23,39 @@ dist_webv2_DATA = \
     $(srcdir)/244.5e1b087a2c055d12f837.chunk.js \
     $(srcdir)/248.86272c9648f6139424aa.chunk.js \
     $(srcdir)/26.be6ba794320d9936a85b.chunk.js \
-    $(srcdir)/270.55bb235d35eaf7b01e22.chunk.js \
+    $(srcdir)/270.08e4ef898465cc7010c5.chunk.js \
     $(srcdir)/309.75e6b92e62ab187b48d7.chunk.js \
     $(srcdir)/327.eaeff782ee641ba2c9d8.chunk.js \
     $(srcdir)/355.dd0f20ecc68e705a45c0.chunk.js \
-    $(srcdir)/378.67f37aef92de60f203bc.chunk.js \
+    $(srcdir)/378.941bd8959916b24bc871.chunk.js \
     $(srcdir)/388.458f29c79c3cc31212b9.chunk.js \
     $(srcdir)/3D_PARTY_LICENSES.txt \
-    $(srcdir)/405.b8ad17597fee573c7c2a.chunk.js \
-    $(srcdir)/425.50393852c97bf5045b08.chunk.js \
-    $(srcdir)/425.50393852c97bf5045b08.chunk.js.LICENSE.txt \
+    $(srcdir)/405.2910b293f130e34614ef.chunk.js \
+    $(srcdir)/425.ae765beee3b0e73957ca.chunk.js \
+    $(srcdir)/425.ae765beee3b0e73957ca.chunk.js.LICENSE.txt \
     $(srcdir)/425.d4eaadf9a64c80cfb238.css \
     $(srcdir)/491.ccf50a459a599910a93b.chunk.js \
     $(srcdir)/514.34e67f51cb675fe68e87.chunk.js \
     $(srcdir)/620.772b37fee5d9609dfa1e.chunk.js \
-    $(srcdir)/642.ba3163e1284904b98af6.chunk.js \
+    $(srcdir)/642.754aee4a16c68ab5d2bf.chunk.js \
     $(srcdir)/693.9e75ef0e12810484d834.chunk.js \
-    $(srcdir)/708.a3cec71fcdb5314fc14d.chunk.js \
+    $(srcdir)/708.bc113d6eb7a73113761d.chunk.js \
     $(srcdir)/724.382c69daa7d78aa070a2.chunk.js \
-    $(srcdir)/829.546d13cf7cf87ca7d746.chunk.js \
-    $(srcdir)/829.546d13cf7cf87ca7d746.chunk.js.LICENSE.txt \
     $(srcdir)/829.ccb665950325037c0dda.css \
+    $(srcdir)/829.e189ab1f9c0e3c4396c9.chunk.js \
+    $(srcdir)/829.e189ab1f9c0e3c4396c9.chunk.js.LICENSE.txt \
     $(srcdir)/855.7237d882144380bcb56b.chunk.js \
     $(srcdir)/898.481553c68483d38c6893.chunk.js \
     $(srcdir)/910.64f12c4c30c45ef4836c.chunk.js \
     $(srcdir)/92.056d9c7eb658e9ce69e4.chunk.js \
     $(srcdir)/920.87513849f708cf43e189.chunk.js \
     $(srcdir)/93.b5623ea98f7eb4813624.chunk.js \
-    $(srcdir)/957.4cbdeb981773a176fa77.chunk.js \
+    $(srcdir)/957.8d8d89ae4226d9fa7335.chunk.js \
+    $(srcdir)/LISENCE.txt \
     $(srcdir)/agent.html \
     $(srcdir)/app.539f0e3a8de5e0c160a6.css \
-    $(srcdir)/app.db124ef7114e346909ee.js \
-    $(srcdir)/app.db124ef7114e346909ee.js.LICENSE.txt \
+    $(srcdir)/app.a3211ee3254b0b069c2f.js \
+    $(srcdir)/app.a3211ee3254b0b069c2f.js.LICENSE.txt \
     $(srcdir)/bundlesManifest.json \
     $(srcdir)/editor.08a1a860087f3e4b5c6d.chunk.js \
     $(srcdir)/editor.08a1a860087f3e4b5c6d.chunk.js.LICENSE.txt \
@@ -63,7 +64,7 @@ dist_webv2_DATA = \
     $(srcdir)/local-agent.html \
     $(srcdir)/npm.react.dom.acf9c264afcd943d8be3.js \
     $(srcdir)/npm.react.dom.acf9c264afcd943d8be3.js.LICENSE.txt \
-    $(srcdir)/runtime.49cc32172c96018358bc.js \
+    $(srcdir)/runtime.71a9638c152729b59ed5.js \
     $(NULL)
 
 webv2staticdir=$(webv2dir)/static
